Fixed another design bug

--- a/index.html
+++ b/index.html
@@ -8,8 +8,26 @@
       sizes="48x48 96x96 144x144"
       type="image/vnd.microsoft.icon"
     />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/SpecGauge iOS.png"
+      type="image/png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SpecGauge | Compare products and predict prices</title>
+    <meta name="robots" content="index, follow" />
+    <meta
+      property="og:title"
+      content="SpecGauge | Compare products and predict prices"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://SpecGauge.com/home" />
+    <meta
+      property="og:description"
+      content="Compare product specs side by side. Predict future prices of products."
+    />
+    <meta property="og:site_name" content="SpecGauge" />
   </head>
   <body>
     <div id="SpecGauge"></div>
