Moved pros index to the top

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SpecGauge | Compare products and predict prices</title>
+    <meta
+      name="description"
+      content="Explore SpecGauge: Easily compare vehicles and electronics side by side. Predict future prices to make informed decisions before you buy. All the tools in one place."
+    />
     <meta name="robots" content="index, follow" />
     <meta
       property="og:title"
