Switched favicon to svg from ico

--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
       gtag("config", "AW-16550385489");
     </script>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      href="/favicon.ico"
-      sizes="48x48 96x96 144x144"
-      type="image/vnd.microsoft.icon"
-    />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
