--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Journey by MediaVine -->
+    <script data-grow-initializer="">
+      !(function () {
+        window.growMe ||
+          ((window.growMe = function (e) {
+            window.growMe._.push(e);
+          }),
+          (window.growMe._ = []));
+        var e = document.createElement("script");
+        (e.type = "text/javascript"),
+          (e.src = "https://faves.grow.me/main.js"),
+          (e.defer = !0),
+          e.setAttribute(
+            "data-grow-faves-site-id",
+            "U2l0ZTphMWRlOTFhMC1iNTk3LTQ4NGItOTAyMy00ZGRiZWIzZTlhNGM="
+          );
+        var t = document.getElementsByTagName("script")[0];
+        t.parentNode.insertBefore(e, t);
+      })();
+    </script>
     <!-- Google tag (gtag.js) -->
     <script
       async
